feat: sistema de cobrancas funcional

--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="NugetPrivado" value="https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/NugetPrivado/nuget/v3/index.json" />
+    <add key="nuget_felipecazotti" value="https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/nuget_felipecazotti/nuget/v3/index.json" />
   </packageSources>
 </configuration>
