--- a/.github/workflows/main_function-gestao-cobranca.yml
+++ b/.github/workflows/main_function-gestao-cobranca.yml
@@ -30,12 +30,13 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Adicionar feed do Azure Artifacts
+        shell: pwsh
         run: |
-          dotnet nuget add source \
-            --username anything \
-            --password ${{ secrets.AZURE_DEVOPS_PAT }} \
-            --store-password-in-clear-text \
-            --name AzureArtifacts \
+          dotnet nuget add source `
+            --username anything `
+            --password ${{ secrets.AZURE_DEVOPS_PAT }} `
+            --store-password-in-clear-text `
+            --name AzureArtifacts `
             "https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/nuget_felipecazotti/nuget/v3/index.json"
 
       - name: 'Resolve Project Dependencies Using Dotnet'
