--- a/.github/workflows/main_function-gestao-cobranca.yml
+++ b/.github/workflows/main_function-gestao-cobranca.yml
@@ -32,8 +32,7 @@ jobs:
       - name: Add Azure Artifacts' feed
         shell: pwsh
         run: |
-          dotnet nuget remove source AzureArtifactsGestaoCobrancas 2>$null || true
-          dotnet nuget add source --username anything --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text --name AzureArtifactsGestaoCobrancas "https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/nuget_felipecazotti/nuget/v3/index.json"
+          dotnet nuget add source --configfile nuget.config --username anything --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text --name AzureArtifactsGestaoCobrancas "https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/nuget_felipecazotti/nuget/v3/index.json"
 
       - name: 'Resolve Project Dependencies Using Dotnet'
         shell: pwsh
