--- a/.github/workflows/main_function-gestao-cobranca.yml
+++ b/.github/workflows/main_function-gestao-cobranca.yml
@@ -28,6 +28,11 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Add Azure Artifacts' feed
+        shell: pwsh
+        run: |
+          dotnet nuget add source --username anything --password ${{ secrets.AZURE_DEVOPS_PAT }} --store-password-in-clear-text --name AzureArtifactsGestaoCobranca "https://pkgs.dev.azure.com/felipecazotti/gestao_cobrancas/_packaging/nuget_felipecazotti/nuget/v3/index.json"
       
       - name: 'Resolve Project Dependencies Using Dotnet'
         shell: pwsh
